# social-sync

./: .gitignore  build-docker-images.sh  build_production_images.sh  build_ui_types.sh  docker-compose.prod.yml  docker-compose.yml  readme.md
.github/workflows/: build_auth_docker.yaml  build_backend_docker.yaml  build_nginx_docker.yaml  build_processor_docker.yaml
auth/: .gitignore  Dockerfile  package.json  production.Dockerfile  tsconfig.json
auth/src/: index.ts
auth/src/models/: userModel.ts
auth/src/routes/: loginRouter.ts  registerRouter.ts  signupRouter.ts
backend/: .gitignore  Dockerfile  package.json  production.Dockerfile  tsconfig.json
backend/src/: index.ts
backend/src/config/: jwtConfig.ts
backend/src/metrics/: index.ts
backend/src/middleware/: authorization.ts
backend/src/models/: attendanceModel.ts  calendarModel.ts  eventsCalendarsModel.ts  eventsModel.ts  invitationsModel.ts  membershipModel.ts
calendar-app/: package-lock.json  package.json
calendar-app/src/: App.css  App.js  calendar.js
database/: init.dbml  init.sql
nginx/: Dockerfile  init-prod.sh  nginx-prod.conf
processor/: .dockerignore  .gitignore  Dockerfile  production.Dockerfile  pyproject.toml
processor/app/: config.py  main.py  model.py  schemas.py  utils.py
proposals/: Dockerfile  models.py
proposals/app/: ml_model.py  proposal_generator.py
shared/: README.md  index.ts  package.json  tsconfig.json
shared/src/: types.ts
ui/: Dockerfile  package-lock.json  package.json  production.Dockerfile  tsconfig.app.json  types.ts
ui/src/: App.css  App.tsx
(+96 files in other folders)
